# speaker-wifi-controller

./: CMakeLists.txt  main.cpp
